# coinglass-python

./: .env.example  .gitignore  LICENSE  PLAN_LEVELS.md  README.md  api_endpoints.raml  api_endpoints.raml.txt  extract_failures.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_futures_oi.py  test_plan_filtering.py  test_sample_fixes.py  test_two_endpoints.py
coinglass/: __init__.py  ahr999.py  api.py  bitcoin_profitable_days.py  bitcoin_rainbow_chart.py  bitfinex_margin_long_short.py  bull_market_peak_indicator.py  client.py  coinbase_premium_index.py  constants.py  endpoints.py  exceptions.py  golden_ratio_multiplier.py  models.py  pi_cycle_top_indicator.py  puell_multiple.py  stock_to_flow.py
coinglass/borrow_interest_rate/: __init__.py
coinglass/calendar/: __init__.py
coinglass/etf/: __init__.py
coinglass/etf/bitcoin/: __init__.py
coinglass/etf/bitcoin/net_assets/: __init__.py
coinglass/etf/bitcoin/premium_discount/: __init__.py
coinglass/etf/bitcoin/price/: __init__.py
coinglass/etf/ethereum/: __init__.py
coinglass/etf/ethereum/net_assets/: __init__.py
coinglass/exchange/: __init__.py
coinglass/exchange/balance/: __init__.py
coinglass/exchange/chain/tx/: __init__.py
coinglass/futures/: __init__.py
coinglass/futures/aggregated_taker_buy_sell_volume/: __init__.py
coinglass/futures/funding_rate/: __init__.py
coinglass/futures/global_long_short_account_ratio/: __init__.py
coinglass/futures/liquidation/: __init__.py
coinglass/futures/liquidation/aggregated_heatmap/: __init__.py
coinglass/futures/open_interest/: __init__.py
coinglass/futures/orderbook/: __init__.py
coinglass/futures/price/: __init__.py
coinglass/futures/rsi/: __init__.py
coinglass/futures/taker_buy_sell_volume/: __init__.py
coinglass/futures/top_long_short_account_ratio/: __init__.py
coinglass/futures/top_long_short_position_ratio/: __init__.py
coinglass/grayscale/: __init__.py
coinglass/grayscale/holdings/: __init__.py
coinglass/grayscale/premium/: __init__.py
coinglass/hk_etf/: __init__.py
coinglass/hk_etf/bitcoin/: __init__.py
coinglass/hyperliquid/: __init__.py
coinglass/index/: __init__.py
coinglass/option/: __init__.py
coinglass/spot/: __init__.py
coinglass/spot/aggregated_taker_buy_sell_volume/: __init__.py
coinglass/spot/orderbook/: __init__.py
coinglass/spot/price/: __init__.py
coinglass/spot/taker_buy_sell_volume/: __init__.py
examples/: basic_usage.py  futures_trading.py  mcp_server_example.py
tests/: conftest.py  test_all_endpoints.py  test_client.py  test_futures.py
(+1 files in other folders)
